<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/drawer_home"
        android:icon="@drawable/ic_home_white"
        android:title="@string/drawer_home_page" />
    <item
        android:id="@+id/drawer_best_deal"
        android:icon="@drawable/ic_best_deal"
        android:title="@string/drawer_best_deal" />
    <item
        android:id="@+id/drawer_notifications"
        android:icon="@drawable/ic_notification_white"
        android:title="@string/drawer_notifications" />
    <item
        android:id="@+id/drawer_rate_us"
        android:icon="@drawable/ic_rate_white"
        android:title="@string/drawer_rate_us" />
    <item
        android:id="@+id/drawer_help"
        android:icon="@drawable/ic_help_white"
        android:title="@string/drawer_help_center" />
    <item
        android:id="@+id/drawer_profile"
        android:icon="@drawable/ic_profile"
        android:title="Hồ sơ cá nhân" />
    <item
        android:id="@+id/drawer_import_data"
        android:icon="@drawable/ic_best_deal"
        android:title="Import dữ liệu mẫu" />
    <item
        android:id="@+id/drawer_sign_out"
        android:icon="@drawable/ic_signout_white"
        android:title="@string/drawer_sign_out" />
</menu>
